--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ body {
   color: white;
   text-decoration: none;
   font-weight: 600;
+  cursor: default;
+  opacity: 0;
+  animation: slideRight 1s ease forwards;
 }
 .navbar a {
   font-size: 25px;
@@ -34,7 +37,9 @@ body {
   text-decoration: none;
   font-weight: 500;
   margin-left: 35px;
-  transition: 2s;
+  transition: 0.3s;
+  opacity: 0;
+  animation: slideTop 1s ease forwards;
 }
 .navbar a:hover {
   color: blue;
@@ -54,18 +59,33 @@ body {
 .home-content {
   max-width: 600px;
 }
+.home-content h3 span {
+  color: blue;
+}
+.home-content h3:nth-last-of-type(2) {
+  margin-bottom: 30px;
+}
 .home-content h3 {
   font-size: 32px;
   font-weight: 700;
+  opacity: 0;
+  animation: slideBottom 1s ease forwards;
+  animation-delay: 1s;
 }
 .home-content h1 {
   font-size: 56px;
   font-weight: 700;
   margin: -3px 0;
   color: blue;
+  opacity: 0;
+  animation: slideLeft 1s ease forwards;
+  animation-delay: 1s;
 }
 .home-content p {
   font-size: 20px;
+  opacity: 0;
+  animation: slideBottom 1s ease forwards;
+  animation-delay: 1s;
 }
 .home-sct a {
   display: inline-flex;
@@ -99,4 +119,44 @@ body {
 }
 .btn-box:hover {
   box-shadow: 0 0 50px blue, 0 0 25px blue, 0 0 100px blue, 0 0 200px blue;
+}
+@keyframes slideRight {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+@keyframes slideTop {
+  0% {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes slideBottom {
+  0% {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
 }
