--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "poppins", sans-serif;
-  background-color: black;
+  color: black;
 }
 body {
   color: white;
