--- a/style.css
+++ b/style.css
@@ -213,18 +213,19 @@ body {
   background: blue;
   border-radius: 40px;
   font-size: 16px;
-  color: #0c0530;
+  color: black;
   letter-spacing: 1px;
   text-decoration: none;
   font-weight: 600;
-  opacity: 0;
   animation: slideTop 1s ease forwads;
   animation-delay: 2s;
   box-shadow: 0 0 5px blue, 0 0 25px blue;
 }
-.Read:hover {
-  box-shadow: 0 0 5px blue, 0 0 25px blue, 0 0 50px blue, 0 0 100px blue,
-    0 0 200px blue;
+.read:hover {
+  box-shadow: 0 0 50px blue, 0 0 25px blue, 0 0 100px blue, 0 0 200px blue;
+}
+.services-list div:hover {
+  transform: translateY(-10px);
 }
 @keyframes slideRight {
   0% {
